objects/Segments__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ClubPersonalCategory__c</fullName>
        <label>Categoría Club Personal</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SegmentLevel1__c</fullName>
        <label>Segmentación Nivel 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SegmentLevel2__c</fullName>
        <label>Segmentación Nivel 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Category</label>
</CustomObject>